removed about me and very old testimonials, added new projects

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
         <h1 class="display-1 m-0 py-5">
           <span id="introduction-name" class="badge rounded-0">Lewis Brown</span>
         </h1>
-        <h5 class="display-6 m-0">Full Stack Software Engineer</h5>
-        <h5 class="display-6 m-0 pb-5">Machine Learning Engineer</h5>
+        <h5 class="display-6 m-0">Software Engineer</h5>
       </div>
     </div>
     <div class="container mb-5">
       <div class="row">
         <div id="opening-statement" class="lead p-5 auto-fade">
           <p class="m-0 ti-3">
-            Hi! I'm Lewis Brown, a software engineer with a passion for building innovative solutions that solve real-world problems. I've worked in software for over 8 years, during which, my career has taken me on a journey exploring commercial, freelance, academic, and research positions. I've worked on a wide range of cross dimiplanary projects, contributing software solutions within aviation, automotive, construction, electric power, food, transportation, and retail industries. I'm a published scholar with two academic journal published papers and successfully defended a my thesis presenting a new form of distributed and privacy preserving machine learning. My unique value proposition lies in my deep foundations in web and research level understanding of AI fusing to create highly accessible and interactive machine learning powered applications. I am confident that I have the horizontal knowledge and skills to make a valuable contribution to your team.
+            Hi!
+            I'm Lewis.
+            Writing software has been a life long passion of mine.
+            I've worked in commercial, freelance, academic, and research positions.
+            Over the years, I've had the pleasure to work alongside some remarkable minds and contribute software in spaces I never would have thought, like aviation, automotive, construction, electric power, public transportation, tax, and retail.
+            I've found myself in the right places to work on some really interesting and impactful projects.
+            My only question is, what's next?
           </p>
         </div>
       </div>
@@ -37,11 +42,8 @@
       <div class="row g-0">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <ul class="toc-list list-group list-group-flush display-6 p-0">
-            <a class="text-decoration-none" href="#about-me">
-              <li class="list-group-item p-5 auto-fade">About Me</li>
-            </a>
             <a class="text-decoration-none" href="#work-experience">
-              <li class="list-group-item p-5 auto-fade">Work Experience</li>
+              <li class="list-group-item p-5 auto-fade">Experience</li>
             </a>
             <a class="text-decoration-none" href="#projects">
               <li class="list-group-item p-5 auto-fade">Projects</li>
@@ -59,32 +61,10 @@
             <a class="text-decoration-none" href="#publications">
               <li class="list-group-item p-5 auto-fade">Publications</li>
             </a>
-            <a class="text-decoration-none" href="#testimonials">
-              <li class="list-group-item p-5 auto-fade">Testimonials</li>
-            </a>
             <a class="text-decoration-none" href="#contact">
-              <li class="list-group-item p-5 auto-fade">Contact Information</li>
+              <li class="list-group-item p-5 auto-fade">Contact</li>
             </a>
           </ul>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid mb-5">
-      <div class="row">
-        <div id="about-me" class="display-4 p-5 text-center">
-          About Me
-        </div>
-      </div>
-    </div>
-    <div class="container mb-5">
-      <div class="row">
-        <div id="about-me-prompt" class="lead p-5 auto-fade">
-          <p class="m-0 mb-3 ti-3">
-            With my academic research background, I'm passionate about staying up-to-date with the latest developments in the field and have a keen interest in exploring new research and techniques. One of my most exciting projects to date was applying my thesis work to an edge computing evironment without the use of a ML library. Doing so required a high volume of investigation, persistence, and creativity to execute.
-          </p>
-          <p class="m-0 ti-3">
-            In my free time, I enjoy a variety of hobbies and interests. I'm an avid reader and spend a lot of time online reading articles and books about a variety of topics. I'm also passionate about strength training, which helps me stay physically and mentally fit. When I'm not working out or reading, I enjoy programming and building personal projects. I find it both challenging and rewarding to create something from scratch and bring my ideas to life. To facilitate this, I have a home lab where I can deploy and utilize various software environments. I also enjoy building and customizing computers and commonly do so for many of my friends. Lastly, I'm an avid gamer and love to challenge myself with difficult games. These hobbies help me unwind and keep my mind engaged outside of work.
-          </p>
         </div>
       </div>
     </div>
@@ -316,6 +296,56 @@
             This project utilizes a combination of classical template matching and the application of a neural network to extract character and numerical values to determine statistics over the duration of a video.
           </p>
           <a href="https://github.com/ramity/apexcv" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Github</span>
+          </a>
+        </div>
+
+        <h2 class="display-6 auto-fade">How Many Divs?</h2>
+        <figure class="figure mb-0">
+          <img class="figure-img img-fluid" src="resources/3d-scatter-plot.gif">
+          <figcaption class="figure-caption">
+            A 3D scatter plot showcasing the impact between div height and div count on DOM time-to-render.
+          </figcaption>
+        </figure>
+        <div class="description auto-fade">
+          <p>
+            This project explored the limit of rendering and evaluated how div height and div count impacted DOM rendering times.
+          </p>
+          <a href="https://github.com/ramity/how-many-divs" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Github</span>
+          </a>
+          <a href="https://www.linkedin.com/posts/ramity_i-recently-explored-a-project-that-examines-activity-7276398012791144448-owVc?utm_source=share&utm_medium=member_desktop&rcm=ACoAAByjuGkBJTqdoumr0ue9AwsMlvl-EeQQI-w" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">LinkedIn</span>
+          </a>
+        </div>
+
+        <h2 class="display-6 auto-fade">Discord Wordle Processor</h2>
+        <figure class="figure mb-0">
+          <img class="figure-img img-fluid" src="resources/screens/discord-wordle-bot.png">
+          <figcaption class="figure-caption">
+            A table showing the wordle scoreboard standings of players.
+          </figcaption>
+        </figure>
+        <div class="description auto-fade">
+          <p>
+            This project was created to settle a long standing debate on who was best at wordle on our discord server.
+            The software covers a discord bot integration to scrape and processes the contents of a channel to determine rankings and calculte all sorts of statistics.
+          </p>
+          <a href="https://github.com/ramity/discord-wordle-processor" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Github</span>
+          </a>
+          <a href="https://ramity.github.io/discord-wordle-processor/" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Site</span>
+          </a>
+        </div>
+
+        <h2 class="display-6 auto-fade">Iris</h2>
+        <div class="description auto-fade">
+          <p>
+            A portable CLI executable for keypair management, identity management, en/decryption, signing, and verification.
+            Created for communicating over unsecure channels.
+          </p>
+          <a href="https://github.com/ramity/iris" target="_blank">
             <span class="badge rounded-pill text-bg-dark">Github</span>
           </a>
         </div>
@@ -883,38 +913,8 @@
     </div>
     <div class="container-fluid mb-5">
       <div class="row">
-        <div id="testimonials" class="display-4 p-5 text-center">
-          Testimonials
-        </div>
-      </div>
-    </div>
-    <div class="container mb-5">
-      <div id="testimonial-container" class="row auto-fade p-4">
-        <p>
-          During my time as a student at the University of Arkansas, I came to know Lewis as a fellow student, friend, and co-worker. We both shared the same enrollment and graduation dates, and as a result often took classes with one another. I met him during my first semester freshman year, and teamed up together on group projects. I had most classes with him throughout my undergraduate studies, and we worked at the same place outside of class for two and a half years. I've always known Lewis to be a highly motivated and dedicated student. It was early into our friendship that I learned he was working to put himself through school. One quality about Lewis that stood out to me was that he was able to use his knowledge to help others learn. I could always rely on him to go in depth with examples and explanations of any topic he had experience in. During our large group projects in software engineering and capstone projects his contributions highly influenced our ability to deliver software solutions in a timely manner. During both of these projects, Lewis took upon the role of project leader to help allocate work in a fair manner and working wherever additional help was needed. Particularly during our capstone II project, his working knowledge of opencv and tesseract enabled our team to implement custom scene recognition for navigation and block identification in a timely manner. We were frequently hit with delays and other unexpected problems that were usually out of our control. Our team often looked to Lewis to give updated estimates of requested features to our electrical engineering contacts. Like all projects, scope creep became a serious issue. I believe his previous development experience allowed us to deliver completed solutions rather than uncompleted. Lewis is not without fault. He has always had a talent for explaining complex concepts simply, but sometimes ironically dwells on optimizing solutions far past their needed requirements. In high pressure situations Lewis will bite off more than he can chew. During our final capstone II project, due to him having a much higher expertise in computer vision, he had tasked himself with a majority of the difficult procedures we had to come up with. Although he was able to deliver in the end, I believe he could benefit from working alongside teammates more during the beginning of a project, so that the final product isn't as rushed and to take a load of the work off of himself. With all the development work Lewis took part in during his undergraduate studies, it is hard not to notice how focused and driven he is when he gets the opportunity to work on a project. Through his prior knowledge, freelancing experience, and web development experience at work, Lewis was always able to take leadership roles in the projects we worked on together. As with most successful leaders, Lewis was able to lend a hand to help the other members of our teams when we were struggling. It is, without a doubt, that Lewis will bring a sizable contribution to our field. Lewis longs for the chance to show what he's capable of.
-        </p>
-        <figcaption class="blockquote-footer">
-          Blake Boswell, <cite>A/AI Software and System Architect Senior @ Lockheed Martin</cite>
-        </figcaption>
-        <p>
-          Lewis Brown is very decisive and goal-oriented student whom has made his mark on the Freshman Engineering Program (FEP). I have had the ultimate pleasure of mentoring Lewis Brown during this academic year via the FEP peer mentorship program. It is very evident to me that Lewis has an adamant interest in the field of Computer Science and Computer Engineering here at the University of Arkansas. As an experienced undergraduate with a degree in computer science and pursuing another degree in computer engineering, I can truly vouch for Lewis' talents and interests in this field. During the course of our mentorship, Lewis stands out as an individual who is prepared to face the academic and mental challenges the University and College of Engineering has to offer. Every meeting I have conducted with him, he exudes a sense of comfort and confidence without being prideful. He is always yearning to listen and is highly respectful. He is a quintessential University of Arkansas student. Lewis comes well prepared for meetings, being very punctual believing that "being early is on-time and being on-time is late." In addition, Mr. Brown shows great aptitude for research work in computer science, and is looking forward to working under our plethora of highly qualified engineering professors. I have a great deal of respect for Lewis Brown and I have no doubt that he will be successful in the goals he decides to pursue. With this scholarship being one of his goals, he will work extra hard to receive and keep this honor. It's highly likely that many professors will have similarly positive experience with Lewis in his succeeding years at this university. He will not let you down!
-        </p>
-        <figcaption class="blockquote-footer">
-          CeDale Smith, <cite>Lead Agile Facilitator & Product Owner @ Phillips 66</cite>
-        </figcaption>
-
-        <p>
-          I've come to admire the passionate and relentless student that Lewis is. Countless times I've watched him get home from work only to continue homework and projects long into the night. During his time interning for Walmart he would prioritize his work and sleep over games and socializing when he would have to wake up at five in the morning for his commute. Naturally, his vast and growing knowledge of computer science has made him a leader among his friends and colleagues, one who loves helping and teaching even if it takes hours to find a solution to someone's problem. At home, I usually find Lewis making finely detailed financial budgeting spreadsheets in excel for himself, and he frequently offers to make them for me and other people. He also spends a lot of time finding ways to maximize the efficiency of anything he does, whether it's hot keys for programs, or personal hobbies such as finding the best formula to generate maximum resources in a game. Like any student, Lewis has his personal shortcomings. One of his setbacks would be the plethora of unfinished personal projects I've seen him set aside for new projects because he doesn't have enough time to see them to completion. In his stubborn ways, he has lingered relentlessly over difficult problems in hopes of improving existing solutions.
-        </p>
-        <figcaption class="blockquote-footer">
-          Friend
-        </figcaption>
-      </div>
-    </div>
-    <div class="container-fluid mb-5">
-      <div class="row">
         <div id="contact" class="display-4 p-5 text-center">
-          Contact Information
+          Contact
         </div>
       </div>
     </div>
