added iris output image + some text changes to index.html

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
         </figure>
         <div class="description auto-fade">
           <p>
-            This project explored the limit of rendering and evaluated how div height and div count impacted DOM rendering times.
+            This project explored the limit of browser rendering and evaluated how div height and div count impacted DOM rendering times.
+            It would go on to disprove my assumption that div sizes impacted render times.
           </p>
           <a href="https://github.com/ramity/how-many-divs" target="_blank">
             <span class="badge rounded-pill text-bg-dark">Github</span>
@@ -340,6 +341,12 @@
         </div>
 
         <h2 class="display-6 auto-fade">Iris</h2>
+        <figure class="figure mb-0">
+          <img class="figure-img img-fluid" src="resources/screens/iris.png">
+          <figcaption class="figure-caption">
+            Example output of running the windows iris executable.
+          </figcaption>
+        </figure>
         <div class="description auto-fade">
           <p>
             A portable CLI executable for keypair management, identity management, en/decryption, signing, and verification.
