--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             I've worked in commercial, freelance, academic, and research positions.
             Over the years, I've had the pleasure to work alongside some remarkable minds and contribute software in spaces I never would have thought, like aviation, automotive, construction, electric power, public transportation, tax, and retail.
             I've found myself in the right places to work on some really interesting and impactful projects.
-            My only question is, what's next?
+            What's next?
           </p>
         </div>
       </div>
