added a sneak peak of the gen 3 mold prototype to projects list

--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
             Below are a small selection of the many projects I've worked on.
           </p>
         </div>
+
+        <h2 class="display-6 auto-fade">Braillest</h2>
+        <figure class="figure mb-5">
+          <img class="figure-img img-fluid" src="resources/13-line-gen-3-prototype.jpg">
+          <figcaption class="figure-caption">
+            A sneak peak of the gen 3 mold prototype.
+          </figcaption>
+        </figure>
+
         <h2 class="display-6 auto-fade">ApexCV</h2>
         <figure class="figure mb-0">
           <img class="figure-img img-fluid" src="resources/screens/apex/rois.jpg">
