updated experience details

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               Jan 2025 - present (4 months)
             </div>
             <div class="card-body">
-              <h3 class="card-title">Owner @ Braillest LLC</h3>
+              <h3 class="card-title">Owner / Technical Lead @ Braillest LLC</h3>
               <p class="card-text ti-3">
 Led the end-to-end architecture, design, and implementation of an innovative solution for tactile literacy, creating a 3D-printed mold system capable of embossing braille onto paper. This initiative combined hardware and software integration, with a strong emphasis on accessibility, open-source contribution, and community-driven refinement.
 Strategic Initiative & Innovation: Conceived and independently launched Braillest to address accessibility gaps in physical braille production using open technologies. Developed a positive/negative mold architecture leveraging 3D printing to create reusable embossing tools, emphasizing modularity, scalability, and reproducibility.
@@ -132,7 +132,7 @@ This role exemplified my ability to drive architectural direction, foster a cult
               Jun 2022 - Jun 2023 (1 year)
             </div>
             <div class="card-body">
-              <h3 class="card-title">Full Stack Engineer @ Freelance</h3>
+              <h3 class="card-title">Full Stack Engineer @ FlyCo</h3>
               <p class="card-text ti-3">
 Spearheaded the end-to-end architecture and delivery of a bespoke flight booking and bidding platform for a regional aviation service in Bentonville, AR, serving both customers and pilots. Operated as one of two engineers on a lean, high-impact team, driving both technical execution and stakeholder alignment in a fully remote setting.
 Architected and delivered a scalable full-stack web application enabling real-time trip booking, pilot bidding workflows, and integrated payment processing—materially enhancing operational efficiency and customer experience.
@@ -197,7 +197,7 @@ Python, Angular, Docker, Django, Keras, PyTorch, Celery, Git
             </div>
             <div class="card-body">
               <h3 class="card-title">
-                Full Stack Engineer @ CTTP - University of Arkansas Research Center
+                Full Stack Engineer @ Center for Training Transportation Professionals (CTTP)
               </h3>
               <p class="card-text ti-3">
 Led modernization and engineering efforts at CTTP, a state-accredited organization responsible for training and certifying employees and contractors of the Arkansas Department of Transportation (ARDOT). Operated in a small, high-impact team where I influenced cross-functional technical decisions and helped guide the transition of critical legacy systems to a maintainable Symfony LTS architecture.
@@ -221,7 +221,7 @@ PHP, Symfony, Twig, Doctrine, MakeBundle, MSAccess, MySQL, Serial over USB, Phab
               May 2018 - Aug 2018 (4 months)
             </div>
             <div class="card-body">
-              <h3 class="card-title">Software Developer (Internship) @ Walmart</h3>
+              <h3 class="card-title">Software Developer (Intern) @ Walmart</h3>
               <p class="card-text ti-3">
 Initiated and led the development of an in-house Optical Character Recognition (OCR) solution to replace third-party vendor offerings, showcasing both technical proficiency and leadership in driving the project from concept to completion.
 Leveraged Tesseract OCR, Electron, and custom technologies (Python, Flask, Celery, MQTT) to design a scalable, multi-node backend system, dramatically improving the digitization of scanned receipts by using distributed computing across clusters.
@@ -266,7 +266,7 @@ PHP, Symfony, Laravel, OSM, OSRM, MQTT, IoT, Custom TCP protocols, Embedded Java
             </div>
             <div class="card-body">
               <h3 class="card-title">
-                Full Stack Developer @ CTTP - University of Arkansas Research Center
+                Full Stack Developer @ Center for Training Transportation Professionals (CTTP)
               </h3>
               <p class="card-text ti-3">
 Led the transition from legacy MSAccess-based systems to a modern Symfony-powered database architecture, significantly improving system performance and reducing manual administrative tasks, directly enhancing operational efficiency across teams.
