expanded braillest project details

--- a/index.html
+++ b/index.html
@@ -302,12 +302,24 @@ PHP, Symfony, Twig, Doctrine, MakeBundle, MSAccess, MySQL, Serial over USB, Phab
         </div>
 
         <h2 class="display-6 auto-fade">Braillest</h2>
-        <figure class="figure mb-5">
+        <figure class="figure mb-0">
           <img class="figure-img img-fluid" src="resources/13-line-gen-3-prototype.jpg">
           <figcaption class="figure-caption">
-            A sneak peak of the gen 3 mold prototype.
+            A photo of the third generation mold prototype.
           </figcaption>
         </figure>
+        <div class="description auto-fade">
+          <p>
+            I pioneered a novel but innovitive approach to use 3d printing to create positive and negative molds which can be used to repeatably emboss braille.
+            I open sourced the software, host a digital presence for the solution, and created a mold set for an entire book as a technology demonstration on printables.
+          </p>
+          <a href="https://github.com/braillest" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Github</span>
+          </a>
+          <a href="https://www.printables.com/model/1251777-romeo-and-juliet-by-william-shakespeare-grade-2-br" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Printables</span>
+          </a>
+        </div>
 
         <h2 class="display-6 auto-fade">ApexCV</h2>
         <figure class="figure mb-0">
