--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ PHP, Symfony, Twig, Doctrine, MakeBundle, MSAccess, MySQL, Serial over USB, Phab
         </figure>
         <div class="description auto-fade">
           <p>
-            I pioneered a novel but innovitive approach to use 3d printing to create positive and negative molds which can be used to repeatably emboss braille.
+            I pioneered a novel but innovative approach to use 3d printing to create positive and negative molds which can be used to repeatably emboss braille.
             I open sourced the software, host a digital presence for the solution, and created a mold set for an entire book as a technology demonstration on printables.
           </p>
           <a href="https://github.com/braillest" target="_blank">
