added year to tagline

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             I'm Lewis.
             Writing software has been a life long passion of mine.
             I've worked in commercial, freelance, academic, and research positions.
-            Over the years, I've had the pleasure to work alongside some remarkable minds and contribute software in spaces I never would have thought, like aviation, automotive, construction, electric power, public transportation, tax, and retail.
+            Over the last 9 years, I've had the pleasure to work alongside some remarkable minds and contribute software in spaces I never would have thought, like aviation, automotive, construction, electric power, public transportation, tax, and retail.
             I've found myself in the right places to work on some really interesting and impactful projects.
             What's next?
           </p>
